# rust_kubernetes_uprgade_TUI

./: Cargo.toml  README.md  downgrade_config_1.30_to_1.29.yaml  notes.md  test.txt
app/: Cargo.toml  README.md
app/src/: main.rs
core/: Cargo.toml
core/src/: cmd.rs  lib.rs  state.rs
core_ui/: Cargo.toml  README.md
core_ui/src/: cmd.rs  lib.rs  parse_lines.rs  state.rs  ui.rs  update_shared_state_info.rs
custom_ratatui_quick_start/: Cargo.toml  notes.md
custom_ratatui_quick_start/src/: cli.rs  error.rs  main.rs  state.rs
debugging/: debugging_logs.txt  shared_state_logs.txt  write_step_cmd_debug.txt
docs/: problem_solving.md
engine/: Cargo.toml  README.md
engine/src/: .lib.rs.swp  lib.rs  lib.rs.save  upgrade_steps_runner.rs
shared_fn/: Cargo.toml
shared_fn/src/: debug_to_file.rs  lib.rs  parse_version.rs  update_shared_state_info.rs  write_debug_steps.rs
shared_traits/: Cargo.toml
shared_traits/src/: lib.rs  step_traits.rs
steps/: README.md
steps/cordon/: Cargo.toml
steps/cordon/src/: .lib.rs.swp  lib.rs
steps/discover_nodes/: Cargo.toml
steps/discover_nodes/src/: lib.rs
steps/drain/: Cargo.toml
steps/drain/src/: lib.rs
steps/madison_version/: Cargo.toml
steps/madison_version/src/: lib.rs
steps/pull_repo_key/: Cargo.toml
steps/pull_repo_key/src/: lib.rs
steps/restart_services/: Cargo.toml
steps/restart_services/src/: lib.rs
steps/uncordon/: Cargo.toml
steps/uncordon/src/: lib.rs
steps/upgrade_apply_ctl/: Cargo.toml
steps/upgrade_apply_ctl/src/: lib.rs
steps/upgrade_node/: Cargo.toml
steps/upgrade_node/src/: lib.rs
steps/upgrade_plan/: Cargo.toml
steps/upgrade_plan/src/: lib.rs
steps/verify_coredns_proxy/: Cargo.toml
steps/verify_coredns_proxy/src/: lib.rs
