[package]
name = "core-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-fn                 = { path = "../shared_fn" }
anyhow      = "1"
async-trait = "0.1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
ratatui     = "0.29"
crossterm   = "0.28"
throbber-widgets-tui = "0.8.0"
